--- a/SouP/src/main/resources/templates/index.html
+++ b/SouP/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
                 <div th:replace="/fragments/nav.html :: fragment-nav"></div>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">새로운 프로젝트/스터디</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"></i>&nbsp;프로젝트 생성하기</a>
+                        <h3 class="text-dark mb-0">새로운 프로젝트/스터디</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="/buildProject"></i>&nbsp;프로젝트 생성하기</a>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-xl-3 mb-4">
