--- a/SouP/src/main/resources/templates/login.html
+++ b/SouP/src/main/resources/templates/login.html
@@ -42,9 +42,9 @@
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/bs-init.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 
 </html>
