--- a/SouP/src/main/resources/templates/lounge.html
+++ b/SouP/src/main/resources/templates/lounge.html
@@ -162,9 +162,9 @@
         </div>
 
     </div>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../static/js/bs-init.js"></script>
-    <script src="../static/js/theme.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/bs-init.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 
 </html>
