--- a/SouP/src/main/resources/templates/fragments/nav.html
+++ b/SouP/src/main/resources/templates/fragments/nav.html
@@ -16,6 +16,8 @@
                             </form>
                         </div>
                     </li>
+                    <a href="/register" style="margin-top: 30px; margin-right: 50px; color: #7abaff">임시 회원가입</a>
+                    <a href="/login" style="margin-top: 30px; margin-right: 50px; color: #7abaff">임시 로그인</a>
                     <li class="nav-item dropdown no-arrow mx-1">
                         <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="badge bg-danger badge-counter">3+</span><i class="fas fa-bell fa-fw"></i></a>
                             <div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in">
@@ -95,3 +97,4 @@
                 </ul>
             </div>
         </nav>
+</html>
