--- a/SouP/src/main/resources/templates/profile.html
+++ b/SouP/src/main/resources/templates/profile.html
@@ -151,9 +151,9 @@
             <div th:replace="/fragments/footer.html :: fragment-footer"></div>
         </div>
     </div>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../static/js/bs-init.js"></script>
-    <script src="../static/js/theme.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/bs-init.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 
 </html>
