--- a/SouP/src/main/resources/templates/fragments/aside.html
+++ b/SouP/src/main/resources/templates/fragments/aside.html
@@ -8,7 +8,7 @@
     </a>
         <hr class="sidebar-divider my-0">
         <ul class="navbar-nav text-light" id="accordionSidebar">
-            <li class="nav-item"><a class="nav-link active" href="/"><i class="fas fa-tachometer-alt"></i><span>프로젝트</span></a></li>
+            <li class="nav-item"><a class="nav-link active" href="/project"><i class="fas fa-tachometer-alt"></i><span>프로젝트 | 스터디</span></a></li>
             <li class="nav-item"><a class="nav-link" href="/profile"><i class="fas fa-user"></i><span>프로필</span></a></li>
             <li class="nav-item"><a class="nav-link" href="/lounge"><i class="fas fa-table"></i><span>라운지</span></a></li>
         </ul>
