--- a/SouP/src/main/resources/templates/projectList.html
+++ b/SouP/src/main/resources/templates/projectList.html
@@ -63,7 +63,7 @@
                         <td th:text="${list.projectName}"></td>
                         <td th:text="${list.stack}"></td>
                         <td th:text="${list.type}"></td>
-                        <td th:text="${list.ipDate}"></td>
+                        <td th:text="${list.createdDate}"></td>
                         <td th:text="${list.text}"></td>
                     </tr>
                 </tbody>
