--- a/SouP/src/main/resources/templates/fragments/nav.html
+++ b/SouP/src/main/resources/templates/fragments/nav.html
@@ -50,7 +50,7 @@
                         <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="badge bg-danger badge-counter">7</span><i class="fas fa-envelope fa-fw"></i></a>
                             <div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in">
                                 <h6 class="dropdown-header">메세지함</h6><a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="img/avatars/avatar4.jpeg">
+                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="/img/avatars/avatar4.jpeg">
                                     <div class="bg-success status-indicator"></div>
                                 </div>
                                 <div class="fw-bold">
@@ -58,7 +58,7 @@
                                     <p class="small text-gray-500 mb-0">송인서 - 58m</p>
                                 </div>
                             </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="img/avatars/avatar2.jpeg">
+                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="/img/avatars/avatar2.jpeg">
                                     <div class="status-indicator"></div>
                                 </div>
                                 <div class="fw-bold">
@@ -66,7 +66,7 @@
                                     <p class="small text-gray-500 mb-0">최성준 - 1d</p>
                                 </div>
                             </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="img/avatars/avatar3.jpeg">
+                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="/img/avatars/avatar3.jpeg">
                                     <div class="bg-warning status-indicator"></div>
                                 </div>
                                 <div class="fw-bold">
@@ -74,7 +74,7 @@
                                     <p class="small text-gray-500 mb-0">최미영 - 2d</p>
                                 </div>
                             </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="img/avatars/avatar5.jpeg">
+                                <div class="dropdown-list-image me-3"><img class="rounded-circle" src="/img/avatars/avatar5.jpeg">
                                     <div class="bg-success status-indicator"></div>
                                 </div>
                                 <div class="fw-bold">
@@ -88,7 +88,7 @@
                     </li>
                     <div class="d-none d-sm-block topbar-divider"></div>
                     <li class="nav-item dropdown no-arrow">
-                        <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">송인서</span><img class="border rounded-circle img-profile" src="img/avatars/avatar1.jpeg"></a>
+                        <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">송인서</span><img class="border rounded-circle img-profile" src="/img/avatars/avatar1.jpeg"></a>
                             <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
                                 <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                             </div>
