add logo and favicon

--- a/SouP/src/main/resources/templates/fragments/aside.html
+++ b/SouP/src/main/resources/templates/fragments/aside.html
@@ -3,7 +3,7 @@
 
 <nav th:fragment="fragment-aside" class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
     <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="/">
-        <img class="sidebar-img" src="https://letspl.s3.ap-northeast-2.amazonaws.com/images/iclogo.png">
+        <img class="sidebar-img" src="/img/logo.png" style="width: 224px;  height: 95px; object-fit: cover;">
         <div class="sidebar-brand-text mx-3"></div>
     </a>
         <hr class="sidebar-divider my-0">
