dynamic change authority

--- a/SouP/src/main/resources/templates/project.html
+++ b/SouP/src/main/resources/templates/project.html
@@ -27,6 +27,7 @@
                         <a href="/oauth2/authorization/google" class="btn btn-success active" role="button" style="float: left; margin-left: 5%">Google Login</a>
                         <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button" style="float: left; margin-left: 5%">Naver Login</a>
                             <a href="/oauth2/authorization/kakao" class="btn btn-third active" role="button">Kakao Login</a>
+                            <a href="/oauth2/authorization/facebook" class="btn btn-third active" role="button">Facebook Login</a>
                         </div>
                     </div>
                 </div>
